code reformatted according to Apache Maven code style, see http://maven.apache.org/developers/conventions/code.html
git-svn-id: https://svn.apache.org/repos/asf/incubator/ognl/trunk@1103095 13f79535-47bb-0310-9956-ffa450edef68